--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@ Software.
     <meta name="theme-color" content="#1A73E8" />
     <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/spalogo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Như Mơ Spa</title>
+    <title>Eden Spa</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"
